--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
       <section class="resume-section" id="about">
         <div class="resume-section-content">
           <h1 class="mb-0">
-            Save
-            <span class="text-primary">Pongsiri</span>
+            Tanet
+            <span class="text-primary">Kejkornkaew</span>
           </h1>
           <div class="subheading mb-5">
             3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+            <a href="mailto:tanet1010kej@gmail.com">tanet1010kej@gmail.com</a>
           </div>
           <p class="lead mb-5">
             I am experienced in leveraging agile frameworks to provide a robust
