--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <span class="d-none d-lg-block"
           ><img
             class="img-fluid img-profile rounded-circle mx-auto mb-2"
-            src="assets/img/profile.jpg"
+            src="assets/img/img.jpg"
             alt="..."
         /></span>
       </a>
@@ -95,14 +95,12 @@
             <span class="text-primary">Kejkornkaew</span>
           </h1>
           <div class="subheading mb-5">
-            3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+            182/2 ถนน เจริญกรุง · บางคอแหลม , 10120 · 094-956-3111·
             <a href="mailto:tanet1010kej@gmail.com">tanet1010kej@gmail.com</a>
           </div>
           <p class="lead mb-5">
-            I am experienced in leveraging agile frameworks to provide a robust
-            synopsis for high level overviews. Iterative approaches to corporate
-            strategy foster collaborative thinking to further the overall value
-            proposition.
+            ชื่อเล่น เบิร์ด อายุ 16 ปี ตอนนี้ศึกษาอยู่ที่โรงเรียน เทพศิรินทร์ ชอบกีฬา บาสเก็ตบอล และ ฟุตบอล
+            สีที่ชอบสีแดง เครื่องดื่มที่ชอบ ชานม ไข่มุก
           </p>
           <div class="social-icons">
             <a class="social-icon" href="#!"
